--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
+Flask==1.1.1
 itemadapter==0.5.0
 itemloaders==1.0.4
+numpy==1.21.5
+pandas==1.3.5
+pytest==7.1.2
+scikit_learn==1.0.2
+scipy==1.7.3
 Scrapy==2.6.1
-selenium==4.1.3
+selenium==4.1.5
+spacy==3.2.1
+stop_words==2018.7.23
 w3lib==1.22.0
